--- a/Eyesight/style.css
+++ b/Eyesight/style.css
@@ -1,1 +1,17 @@
 
+body {
+ background-color: beige;
+ text-align: center;
+}
+
+h3 {
+ filter: blur(4px);
+}
+
+h4 {
+ filter: blur(2px);
+}
+
+h5 {
+ filter: blur(1px);
+}
